--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,32 +69,9 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
-                </li>
-              
-                <li class="nav-item">               
                 <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                 </li>
-
-                <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://bootstrapstarter.com/bootstrap-templates/template-mediumish-bootstrap-jekyll/"> Docs</a>
-                </li>                
-                
-                <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-wordpress/"><i class="fab fa-wordpress-simple"></i> WP Version</a>
-                </li>
-                
-                <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-ghost/"><i class="fab fa-snapchat-ghost"></i> Ghost Version</a>
-                </li>
-
-                
-                <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/mediumish-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a>
-                </li>
-                
-                {% include search-lunr.html %}
-                
+              
             </ul>		
         
         
@@ -110,15 +87,12 @@ ga('send', 'pageview');
 
 <!-- Site Title
 ================================================== -->
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">{{ site.title }}</h1>
-    <p class="lead font-weight-normal">{{ site.description }}</p>
-    <a class="btn btn-outline-secondary" href="#">Coming soon</a>
-  </div>
-  <div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-</div>
+    <div class="sb-page-header position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+            <h1 class="posttitle"><a class="text-dark" href="/">{{ site.title }}</a></h1>    
+            <p class="lead font-weight-normal text-dark">{{ site.description }}</p>
+        </div> 
+    </div>
     
 <div class="site-content">   
     
