--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,19 +21,6 @@ post_class: post-template
         
 		<div class="col-md-9 flex-first flex-md-unordered">
 			<div class="mainheading">
-
-                <!-- Author Box -->
-                {% if page.author %}				
-				<div class="row post-top-meta">
-					<div class="col-xs-12 col-md-3 col-lg-2 text-center text-md-left mb-4 mb-md-0">
-						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-					</div>
-					<div class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left">
-						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
-						<span class="author-description">{{ author.description }}</span>						
-					</div>
-				</div>				
-                {% endif %}
                 
                 <!-- Post Title -->
 				<h1 class="posttitle">{{ page.title }}</h1> 
@@ -76,13 +63,6 @@ post_class: post-template
 				{{content}}
 			</div>
             
-            <!-- Rating -->
-            {% if page.rating %}
-            <div class="rating mb-4 d-flex align-items-center">
-                <strong class="mr-1">Rating:</strong> {% include star_rating.html %}
-            </div>
-            {% endif %}
-            
             <!-- Post Date -->
             <p>
             <small>
@@ -92,6 +72,19 @@ post_class: post-template
                 {% endif %}
                 </small>
             </p>
+
+                <!-- Author Box -->
+                {% if page.author %}                
+                <div class="row post-top-meta">
+                    <div class="col-xs-12 col-md-3 col-lg-2 text-center text-md-left mb-4 mb-md-0">
+                        <img class="author-thumb" src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ author.display_name }}">
+                    </div>
+                    <div class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left">
+                        <a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Seguir</a>
+                        <span class="author-description">{{ author.description }}</span>                        
+                    </div>
+                </div>              
+                {% endif %}
             
 			<!-- Post Categories -->
 			<div class="after-post-cats">
@@ -118,7 +111,7 @@ post_class: post-template
 				</ul>
 			</div>
 			<!-- End Tags -->
-            
+
             <!-- Prev/Next -->
             <div class="row PageNavigation d-flex justify-content-between font-weight-bold">
             {% if page.previous.url %}
@@ -138,46 +131,3 @@ post_class: post-template
 </div>
 <!-- End Article
 ================================================== -->
-
-  
-
-<!-- Begin Comments
-================================================== -->
-{% if page.comments != false %}
-    <div class="container">
-        <div id="comments" class="row justify-content-center mb-5">
-            <div class="col-md-8">              
-                {% include disqus.html %}                
-            </div>
-        </div>
-    </div>
-{% endif %}
-<!--End Comments
-================================================== -->
-
-
-<!-- Review with LD-JSON, adapt it for your needs if you like, but make sure you test the generated HTML source code first: 
-https://search.google.com/structured-data/testing-tool/u/0/
-================================================== -->
-{% if page.rating %}
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org/",
-  "@type": "Review",
-  "itemReviewed": {
-    "@type": "Thing",
-    "name": "{{ page.title }}"
-  },
-  "author": {
-    "@type": "Person",
-    "name": "{{ author.display_name }}"
-  },
-  "datePublished": "{{ page.date | date:"%Y-%m-%d" }}",
-  "reviewRating": {
-    "@type": "Rating",   
-    "ratingValue": "{{ page.rating }}",
-    "bestRating": "5"
-  }
-}
-</script>
-{% endif %}
