--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,4 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax",
-    "stars",
-	"bootstrap/bootstrap"
-;
+	"bootstrap/bootstrap";
