--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,8 +91,8 @@ ga('send', 'pageview');
 ================================================== -->
     <div class="sb-page-header position-relative overflow-hidden p-2 p-md-4 text-center bg-light">
       <div class="col-md-4 p-lg-4 mx-auto my-4">
-            <h1 class="posttitle"><a class="text-dark" href="/">{{ site.title }}</a></h1>    
-            <p class="lead font-weight-normal text-dark">{{ site.description }}</p>
+            <h1 class="posttitle"><a class="text-white" href="/">{{ site.title }}</a></h1>    
+            <p class="lead font-weight-normal text-white">{{ site.description }}</p>
         </div> 
     </div>
     
