--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -422,8 +422,16 @@ License: https://www.wowthemes.net/freebies-license/
     }
 
      .article-post {
-     font-size:0.9em;
+     font-size:1em;
 }
+
+ .article-post .h1, .article-post .h2, .article-post .h3, .article-post .h4, .article-post .h5, .article-post .h6, .article-post h1, .article-post h2, .article-post h3, .article-post h4, .article-post h5, .article-post h6 {
+     font-weight: 600;
+     margin-bottom: 1.2rem;
+}
+
+
+
 }
  .share,.share a {
      color:rgba(0,0,0,.44);
