--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,7 @@ post_class: post-template
                 
                 <!-- Post Title -->
 				<h1 class="posttitle">{{ page.title }}</h1> 
+                <h4>{{ page.subtitle }}</h4> 
                 
 			</div>
 
