--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,9 +69,11 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                <a class="nav-link" href="{{ site.baseurl }}/about">Equipo</a>
                 </li>
-              
+                
+                {% include search-lunr.html %}
+  
             </ul>		
         
         
