--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,7 +149,7 @@ ga('send', 'pageview');
                  Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
+                Rediseño del LocalDataLab a partir de <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a>.
             </div>
         </div>
     </div>
