nuevo post mas portada

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,13 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
     
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+
+<link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-0.12.13.min.css" type="text/css" />
+        
+<script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.13.min.js"></script>
+<script type="text/javascript">
+    Bokeh.set_log_level("info");
+</script>
     
 </head>
     
@@ -98,7 +105,12 @@ ga('send', 'pageview');
         </div> 
     </div>
     
-<div class="container">     
+<div class="container">
+
+<div class="jumbotron text-center">
+  <h1><a href="/">Así han sido las elecciones en Elche hasta ahora</a></h1>
+<p class="lead">Publicamos los análisis tras las elecciones de 2019: a partir de las generales y autónomicas del 28A y, sobre todo, de las municipales del 26M. Síguelos en<a href="{{site.baseurl}}/categories#historico">#histórico</a>, <a href="{{site.baseurl}}/categories#discurso">#discurso</a>, <a href="{{site.baseurl}}/categories#redes">#redes</a> y <a href="{{site.baseurl}}/categories#programas">#programas</a>. En <a href="{{site.baseurl}}/categories#resultados">#resultados</a></p>
+</div>
     
 <!-- Content
 ================================================== --> 
