--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ post_class: post-template
                 
 			</div>
 
-			<!-- Post Featured Image -->
+			<!-- Post Featured Image 
             {% if page.image %}
 
             {% if site.lazyimages == "enabled" %}
@@ -37,7 +37,7 @@ post_class: post-template
             {% endif %}
 
             {% endif %}
-            <!-- End Featured Image -->
+            End Featured Image -->
             
             
 
