--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -31,7 +31,7 @@
             <div class="wrapfooter">
                 {% if post.author %}
                 <span class="meta-footer-thumb">
-                <img class="author-thumb" src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ author.display_name }}"></span>                
+                <img class="author-thumb" src="{{ author.pic }}" alt="{{ author.display_name }}"></span>          
                 <span class="author-meta">
                 <span class="post-name"><a target="_blank" href="{{ author.web }}">{{ author.display_name }}</a></span><br/>
                 {% endif %}
