--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@ post_class: post-template
                 {% if page.author %}                
                 <div class="row post-top-meta">
                     <div class="col-xs-12 col-md-3 col-lg-2 text-center text-md-left mb-4 mb-md-0">
-                        <img class="author-thumb" src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ author.display_name }}">
+                        <img class="author-thumb" src="{{ author.pic }}" alt="{{ author.display_name }}">
                     </div>
                     <div class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left">
                         <a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Seguir</a>
