--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@ ga('send', 'pageview');
     <div class="collapse navbar-collapse" id="navbarMediumish">
        
         <!-- Begin Menu -->
-        
+
             <ul class="navbar-nav ml-auto">
                 
                 {% if page.url == "/" %}
@@ -81,7 +81,14 @@ ga('send', 'pageview');
         <!-- End Menu -->
 
     </div>
-        
+
+            <a class="navbar-brand" href="{{ site.baseurl }}/">
+                <img src="{{ site.baseurl }}/assets/images/mip.jpg" alt="Inicio">
+            </a>
+            <a class="navbar-brand" href="{{ site.baseurl }}/">
+                <img src="{{ site.baseurl }}/assets/images/periodismo.png" alt="Inicio">
+            </a>
+   
     </div>
 </nav>
 <!-- End Navigation
