--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@ ga('send', 'pageview');
                 <img src="{{ site.baseurl }}/assets/images/mip.jpg" alt="Inicio">
             </a>
             <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <img src="{{ site.baseurl }}/assets/images/periodismo.png" alt="Inicio">
+                <img src="{{ site.baseurl }}/assets/images/periodismo.jpg" alt="Inicio">
             </a>
    
     </div>
