--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,14 +50,10 @@ ga('send', 'pageview');
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+    <span class="small">Local Data Lab</span>
     </a>
-    <!-- End Logo -->
-  
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    
+                
+
     <div class="collapse navbar-collapse" id="navbarMediumish">
        
         <!-- Begin Menu -->
@@ -75,20 +71,22 @@ ga('send', 'pageview');
                 {% include search-lunr.html %}
   
             </ul>		
-        
-        
-  
         <!-- End Menu -->
-
     </div>
+        <!-- End Logo -->
+      <div class="float-right">    
 
-            <a class="navbar-brand" href="{{ site.baseurl }}/">
+            <a class="navbar-brand align-self-right" href="{{ site.baseurl }}/">
                 <img src="{{ site.baseurl }}/assets/images/mip.jpg" alt="Inicio">
             </a>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">
+            <a class="navbar-brand align-self-right" href="{{ site.baseurl }}/">
                 <img src="{{ site.baseurl }}/assets/images/periodismo.jpg" alt="Inicio">
             </a>
-   
+      </div>      
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    
     </div>
 </nav>
 <!-- End Navigation
