arreglo links nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,11 +76,11 @@ ga('send', 'pageview');
         <!-- End Logo -->
       <div class="float-right">    
 
-            <a class="navbar-brand align-self-right" href="{{ site.baseurl }}/">
-                <img src="{{ site.baseurl }}/assets/images/mip.jpg" alt="Inicio">
+            <a class="navbar-brand align-self-right" href="http://mip.umh.es/" target=”_blank”>
+                <img src="{{ site.baseurl }}/assets/images/mip.jpg" alt="Máster en Innovación en Periodismo">
             </a>
-            <a class="navbar-brand align-self-right" href="{{ site.baseurl }}/">
-                <img src="{{ site.baseurl }}/assets/images/periodismo.jpg" alt="Inicio">
+            <a class="navbar-brand align-self-right" href="http://periodismo.umh.es/" target=”_blank”>
+                <img src="{{ site.baseurl }}/assets/images/periodismo.jpg" alt="Periodismo UMH">
             </a>
       </div>      
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
