--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,12 +59,10 @@ ga('send', 'pageview');
         <!-- Begin Menu -->
 
             <ul class="navbar-nav ml-auto">
-                
-                {% if page.url == "/" %}
-                <li class="nav-item active">
-                {% else %}
                 <li class="nav-item">
-                {% endif %}
+                <a class="nav-link" href="{{ site.baseurl }}/republica">(re)Publica</a>
+                </li>
+                <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/equipo">Equipo</a>
                 </li>
                 
