--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,9 @@
 </script>
 {% endif %}
 
+<!-- Load KaTeX -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML" async></script>
+
 </head>
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
